# phase6-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  renovate.json
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: check_subjects.py  debug_create.py  dump_manage_html.py  dump_subjects.py  dump_vocab_html.py  explore.py  explore_create.py  explore_html.py  find_add_button.py  find_add_button2.py  intercept_create.py  intercept_create_2.py  intercept_create_3.py  intercept_create_4.py  intercept_create_5.py  intercept_create_6.py  intercept_create_7.py  intercept_create_8.py  intercept_create_9.py  test_api_context.py  test_api_create.py  test_card_content.py  test_card_list.py  test_cli.py  test_create_api.py  test_headers.py  test_playwright_direct.py  test_playwright_robust.py  test_playwright_robust2.py  test_pure_login.py  test_refactor_actions.py  test_refactor_client.py  test_url_routing.py  test_user_agent.py
src/pyphase6/: cli.py  client.py  models.py
src/pyphase6.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_client.py  test_models.py
