[project]
name = "pyphase6"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.58.0",
    "pydantic==2.12.5",
    "rich==14.3.3",
    "typer==0.24.1",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "python-semantic-release==9.21.1",
    "ruff==0.15.4",
]

[project.scripts]
pyphase6 = "pyphase6.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build==0.10.7"]
build-backend = "uv_build"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
commit_author = "github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
